--- a/ZanY_index.html
+++ b/ZanY_index.html
@@ -7,7 +7,7 @@ Created on: 15 March 2016
 -->
 <html>
 <head><title>ZanY&trade;-Welcome</title>
-<link rel="stylesheet" href="style.css" type="text/css"></head>
+<link rel="stylesheet" href="css/style.css" type="text/css"></head>
 <body>
   <header>
   <h1 id="loginhead">ZaNy<span style="font-size:20px;">&trade;</span></h1>
