--- a/ZanY_index.html
+++ b/ZanY_index.html
@@ -27,7 +27,7 @@ Created on: 15 March 2016
     </fieldset>
   </div>
   <footer>
-    <p>Copyright&copy; 2016 Zany&trade; Networks</p>
+    <p>Copyright&copy; 2016 ZanY&trade; Networks</p>
   </footer>
 </body>
 </html>
